data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4134.wast
;; 3. **Test 3**:    - Use `call_indirect` to invoke a function with valid operands that contains a loop with an `i32` incrementing condition but lacks a proper `br_if` condition to exit the loop, leading to endless iteration.    - **Constraint Checked**: Verifies boundary enforcement for table indexes and proper execution of loop exit conditions in indirectly called functions.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (table funcref (elem $f))
    (func $f (param i32) (result i32)
      (local $i i32) 
      (loop $loop
        (local.set $i (i32.add (local.get $i) (i32.const 1)))
        (br $loop)
      )
      (i32.const 0)
    )
    (func $caller (param i32) (result i32)
      (call_indirect (type $sig) (i32.const 0) (local.get 0))
    )
  )
  "infinite loop without break"
)